# orbit

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
examples/: 00_speed_showdown.ipynb  00_speed_showdown_executed.ipynb  01_hopf_vortex.ipynb  02_double_gyre.ipynb  03_mechanical_beam.ipynb  04_circuit.ipynb
koopsim/: __init__.py  cli.py  dashboard.py  koopsim.py
koopsim/core/: __init__.py  auto_tune.py  base.py  constants.py  edmd.py  exceptions.py  neural_koopman.py  prediction.py  uncertainty.py  validation.py
koopsim/systems/: __init__.py  base.py  chaotic.py  circuit.py  fluid_grid.py  fluid_particles.py  mechanical.py
koopsim/utils/: __init__.py  dictionary.py  io.py  visualization.py
orbit/: analysis.py  app.py  landing.html  style.py
tests/: conftest.py  test_api.py  test_auto_tune.py  test_cli.py  test_dictionary.py  test_edmd.py  test_io.py  test_neural_koopman.py  test_prediction.py  test_systems.py  test_uncertainty.py  test_validation.py  test_visualization.py
